# NEW_RDP_Cloud

./: .gitignore  CMakeLists.txt  INSTALL.txt  _build.bat  _bump_version.py  _gen_pnpext_sys.py  audio_dsp.h  capture_helper.h  capture_helper_main.cpp  capture_ipc.h  deploy-vps.sh  dllmain.cpp  exports.def  file_manager.h  h264_encoder.h  host.h  host_config.json.template  index.html  logger.h  main.cpp  nginx-remote-desktop.conf  nginx.conf  process_manager.h  screen_capture.h  server.py  service_host.h  setup-vps.sh  threat_scan.h  webrtc_stream.cpp  webrtc_stream.h  ws_client.h
cloudflare/: worker.js  wrangler.toml
docs/: Prometey_AZ.pptx  build_guides.py  build_pptx.py  create_docx.js  create_docx.py  dllmain.cpp  gen_synthetic.py  main.cpp  screenshots_list.docx
docs/OLD/: main.cpp
docs/img/: host_config.json
